--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,7 @@ MODE = "debug"
 TARGET_UPSTREAM = "https://registry-1.docker.io"
 
 [env.production]
+MODE = "debug"
 name = "cloudflare-docker-proxy"
 # routes = [
 #   { pattern = "docker.libcuda.so", custom_domain = true },
